Fixed Door Selector layout issues

--- a/src/css/Build.css
+++ b/src/css/Build.css
@@ -9,18 +9,25 @@
   width: 99vw;
   margin: 2.25vh auto;
 }
+
 @media(min-width:650px){
-  #build-page-grid {grid-template-rows: 50% 1fr; }
+  #build-page-grid {grid-template-rows: 60% 1fr; }
 }
 @media(min-width:1025px){
   #build-page-grid {
-    grid-template-columns: 60% 1fr;
+    grid-template-columns: 65% 1fr;
     grid-template-rows: 100%;
+  }
+  #options-section h2{
+  font-size:1.5rem;
+  }
+  #options-section h3{
+    font-size:1.2rem;
   }
 }
 #door-section{
   width:100%;
-  height:min(100%,600px);
+  height: 100%;
   display:flex;
   justify-content:space-evenly;
   flex-direction: column;
@@ -53,7 +60,7 @@
   flex-wrap:wrap;  
   justify-content: center;
   row-gap:0.75em;
-  column-gap:1.5em;
+  column-gap:1em;
   background-color:var(--color-orange-dark)
 }
 #size-container h2{margin-bottom:0;flex-basis:100%;}
@@ -64,6 +71,9 @@
   border-radius:8px;
   transition:0.2s;
   cursor:pointer;
+}
+@media(min-width:1025px){
+  #size-container p{font-size:0.8em}
 }
 #size-container p:not(.selected-size):hover{
   transform:scale(1.05);
@@ -108,7 +118,7 @@
   flex-wrap: wrap;
   justify-content: center;
   width:100%;
-  gap:1em;
+  gap:0em;
   background-color:var(--color-yellow)
 }
 #colors-container > h2{
@@ -117,11 +127,10 @@
   column-gap:2%;
   flex-basis: 100%;
 }
-#colors-container > h2 > *{margin:0;}
+#colors-container > h2{margin-bottom:min(20px,5%)}
 .color-box {/*Holds Color name and Color Icon*/
   flex:0 1 auto;
-  width:25%;
-  min-width:100px;
+  width:33%;
   max-width: 150px;
   margin:0;
   display:flex;
@@ -134,6 +143,7 @@
   aspect-ratio: 1;
   border-radius: 50%;
   margin-top:10%;
+  margin-bottom:20%;
   transition:0.2s;
   box-shadow: 8px 12px 20px rgba(0, 0, 0, 0.5);
   cursor:pointer;
@@ -223,7 +233,7 @@ transition:0.2s;
   width:100%;
   aspect-ratio: 1;
   transition:0.2s;
-  outline: 2px solid black;
+  outline: 3px solid black;
 }
  @media (min-width:1025px){.insert-box >div {height:3.5vw}} 
 
@@ -243,7 +253,7 @@ transition:0.2s;
 }
 .window-box.selected-glass > div {
   transform: scale(1.1); /* extra boost only for the actual window icon*/
-  outline:3px solid black;
+  outline:3px solid red;
   transition: 0.1s;
 }
 .insert-box > div:hover{
@@ -252,16 +262,16 @@ transition:0.2s;
 }
 
 .selected {/*General selector*/
-  outline:3px solid black;
+  outline:3px solid red;
   transform:scale(1.1);
 }
 .selected-design{
-  outline:2px solid black;
+  outline:3px solid red;
   transform:scale(1.05);
 }
 .insert-box > div.selected-insert {
   transform:scale(1.05);
-  outline: 2px solid red;
+  outline: 3px solid red;
 }
 
 /*hover and  selection styles*/
