--- a/src/css/index.css
+++ b/src/css/index.css
@@ -56,7 +56,7 @@ body {
 
 h1, h2, h3, h4, h5, h6,p{margin: 0;padding: 0; font-weight:400;}
 h1, h2{font-weight:600}
-p{font-size:1em;}
+p{font-size:1em;font-weight:600}
 span {
   display: inline-block;
   transition: transform 0.2s, text-decoration 0.2s;
@@ -88,23 +88,61 @@ input[type="checkbox"] {
   cursor:pointer;
   accent-color: var(--color-grey)
 }
-#test-flex {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  padding: 1rem;
-  max-width: 1200px;
-  margin: 0 auto;
-  border: 2px dashed #999;
-  border-radius: 0.5rem;
-  /* background-color:var(--color-orange-light); */
-}
 .attention{
   text-decoration: underline;
   cursor:pointer;
 }
 .attention:hover{transform:scale(1.05)}
 .bolder{font-weight:500}
+
+.btns{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  width:75%;
+  gap:0.5rem;
+}
+.btns > a:first-child{width:35%;}
+.btns > a:last-child{width:65%;}
+.btns > button:first-child{width:35%;}
+.btns > button:last-child{width:65%;}
+.back-btn{
+  background-color:var(--color-yellow);
+  color:black;
+  margin:0.25em 0 0;
+  font-weight:600;
+  width:100%;
+  margin:0;
+}
+.continue-btn{
+  background-color:var(--color-grey);
+  color:white;
+  margin:0.25em 0 0;
+  font-weight:600;
+  width:100%;
+  margin:0;
+}
+.back-btn:hover{
+  background-color: var(  --color-orange-dark);
+  transform:scale(1.02);
+  transition:0.1s;
+}
+.continue-btn:hover{
+  background-color: var(  --color-orange-dark);
+  transform:scale(1.02);
+  transition:0.1s;
+}
+.disabled-btn{
+  opacity:0.8
+}
+.continue-btn.disabled-btn:hover{
+  background-color:var(--color-grey);
+  transform: none;
+  transition:0.1s;
+  cursor:default;
+}
+@media (max-width:500px){.build-door-btn{width:100%}}
+
 
 
 /*
@@ -118,4 +156,17 @@ input[type="checkbox"] {
     <p>This is a paragraph of text to test scaling. Resize the window to see how clamp() behaves.</p>
     <span>This is a span element (inline by default).</span>
     <button>Click Me</button>
-</div> */
+</div> 
+#test-flex {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  max-width: 1200px;
+  margin: 0 auto;
+  border: 2px dashed #999;
+  border-radius: 0.5rem;
+ background-color:var(--color-orange-light);
+}
+*/
+
